--- a/main/templates/redirect_error.html
+++ b/main/templates/redirect_error.html
@@ -23,7 +23,7 @@
 <body>
     <h1 class="error-code">404</h1>
     <h2 class="error-message">Page Not Found</h2>
-    <p>The page you are looking for does not exist.</p>
+    <p>Путь <a href="{{ url }}">{{ url }}</a> не найден</p>
     <p><a href="/">Return to homepage</a></p>
 </body>
 </html>
