--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -63,7 +63,7 @@
                     <path d="M 10,10 L 30,30 M 30,10 L 10,30" stroke="black" stroke-width="4"/>
                 </svg>
             </div>
-            <strong>Успех! Укороченный URL:</strong> <a href="{{ full_path }}/{{ shorted_url }}">
+            <strong>Успех! Укороченный URL:</strong> <a href="{{ full_path }}{{ shorted_url }}">
             {{ full_path }}{{ shorted_url }}</a>
         </div>
     </div>
